update from local bkp

--- a/form.html
+++ b/form.html
@@ -24,22 +24,18 @@
 	</div>
 
 	<div>
-		<div class="title" style="padding-bottom: 20px;">
-			<h1>Escolha seu plano</h1>
-			<h2>Sem complicação pra você aproveitar seu tempo com seu pet</h2>
-		</div>
+		<form>
+			<div>
+				<label for="Nome">Nome:</label>
+				<input type="text" name="Nome">
+			</div>
+			<div>
+        		<label for="email">E-mail:</label>
+        		<input type="email" id="email" />
+    		</div>
+    	</form>
+	</div>
 
-		<div class="container">
-			<div class="row">
-				<div class="pricecar" class="col">
-					<div class="card"><img src="images/petting.jpg" style="width:250px;"></div>
-					<div class="btn-price"><a><h3>Chat Vet</h3><h1>R$ 9,90</h1><p>Avaliação Virtual por Chat</p><p>Aconselhamento Personalizado</p></a></div>
-					<div class="btn-price"><a><h3>Personal Vet</h3><h1>R$ 19,90</h1><p>Avaliação Virtual por Video</p><p>Aconselhamento Personalizado</p><p><u>Mais popular</u></p></a></div>
-					<div class="btn-price"><a><h3>Consulta Domiciliar</h3><h1> 4 x R$ 29,90</h1><p>Avaliação Virtual</p><p>Aconselhamento Personalizado</p><p>Consulta Domiciliar</p></a></div>
-				</div>
-			</div>	
-		</div>
-	</div>    
 
 </body>
 </html>
