--- a/productsflea.html
+++ b/productsflea.html
@@ -13,12 +13,12 @@
 <body>
 	<!-- NAVBAR -->
 	<div class="navbar">
-		<img src="images/oficial.png" alt="Logo Pet Eats" style="width:150px;height:150px;border-radius: 50%;" />
+		<img src="images/honest-logo.jpg" alt="Logo Honest"/>
 		<a href="index.html"><h3>Home</h3></a>
 		<a href="productsflea.html"><h3>Produtos</h3></a>
-		<a href="exam.html"><h3 href="#">Exame Virtual</h3></a>
-		<a href="learn.html"><h3>Saiba Mais</h3></a>
-		<h3 href="#">Quem Somos</h3>
+		<a href="exam.html"><h3 href="#">Consultoria Virtual</h3></a>
+		<a href="learn.html"><h3>Nossos Planos</h3></a>
+		<h3 href="#">Como Funciona</h3>
 		<a href="cadastro.html" class="signup">Cadastre seu Pet</a>
 		<a href="login.html" class="signup"><i class="fas fa-paw"></i> Login</a>
 	</div>
