--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pet Eats & Co.</title>
+    <title>Honest Pet Food</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -13,36 +13,40 @@
 <body>
 	<!-- NAVBAR -->
 	<div class="navbar">
-		<img src="images/oficial.png" alt="Logo Pet Eats" style="width:150px;height:150px;border-radius: 50%;" />
+		<img src="images/honest-logo.jpg" alt="Logo Honest"/>
 		<a href="index.html"><h3>Home</h3></a>
 		<a href="productsflea.html"><h3>Produtos</h3></a>
-		<a href="exam.html"><h3 href="#">Exame Virtual</h3></a>
-		<a href="learn.html"><h3>Saiba Mais</h3></a>
-		<h3 href="#">Quem Somos</h3>
+		<a href="exam.html"><h3 href="#">Consultoria Virtual</h3></a>
+		<a href="learn.html"><h3>Nossos Planos</h3></a>
+		<h3 href="#">Como Funciona</h3>
 		<a href="cadastro.html" class="signup">Cadastre seu Pet</a>
 		<a href="login.html" class="signup"><i class="fas fa-paw"></i> Login</a>
 	</div>
 
 	<div>
 		<div class="banner">
-			<h1 style="padding-left: 150px;">Cuidado moderno para seu PET</h1>
-			<h2 style="padding-left: 150px;">Mais saudáveis, mais felizes</h2>
+			<h1 style="padding-left: 150px;">Como podemos ajudar seu pet hoje?</h1>
+			<h2 style="padding-left: 150px;">Porque cães mais saudáveis são cães mais felizes</h2>
 		</div>
 
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-4 col-md-3">
-					<img src="images/dogbluebg.jpg" style="width:100%; border-radius: 50%;">
+					<img src="images/dogbluebgsquared.jpg" style="width:400px; border-radius: 50%;">
+					<div id="circle"></div>
 				</div>
 				<div class="main-menu">
 					<div class="col-xs-12 col-sm-8 col-md-9">
 						<div class="main-grid">
-							<div class="main-grid"><a class="btn-peteats">Ansiedade</a></div>
-							<div class="main-grid"><a href="productsflea.html" class="btn-peteats">Pulgas</a></div>
-							<div class="main-grid"><a class="btn-peteats">Pele</a></div>
-							<div class="main-grid"><a class="btn-peteats">Obesidade</a></div>
-							<div class="main-grid"><a class="btn-peteats">Dental</a></div>
-							<div class="main-grid"><a class="btn-peteats">Geral</a></div>
+							<div class="main-grid"><a class="btn-peteats">Rações</a></div>
+							<div class="main-grid"><a href="productsflea.html" class="btn-peteats">Obesidade</a></div>
+							<div class="main-grid"><a class="btn-peteats">Alimentação Natural</a></div>
+							<div class="main-grid"><a class="btn-peteats">Rações Terapêuticas</a></div>
+							<div class="main-grid"><a class="btn-peteats">Higiene Dental</a></div>
+							<div class="main-grid"><a class="btn-peteats">Petiscos</a></div>
+							<div class="main-grid"><a class="btn-peteats">Padaria Pet</a></div>
+							<div class="main-grid"><a class="btn-peteats">Ossos</a></div>
+							<div class="main-grid"><a class="btn-peteats">Bebidas</a></div>
 						</div>
 					</div>
 				</div>
